# ChaTOR

./: .gitignore  LICENSE  README.md  discord_beacons.rs  package-lock.json  package.json  post-build.bat  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: node.js.yml
src/: App.svelte  app.css  body.svelte  main.ts
src-tauri/: Cargo.toml  build.rs  config.toml  dev-config.toml  post-build.bat  tauri.conf.json
src-tauri/gamedata/: achievements.json  checker.py  quests.json
src-tauri/icons/: icon.icns
src-tauri/misc/: .itch.toml  post-build.bat
src-tauri/sql/: tables.sql
src-tauri/sql/migration/: 0.1.0-0.1.1.sql
src-tauri/src/: capture_injecter.rs  capture_injector.rs  config.rs  crash_reporter.rs  dal.rs  lib.rs  lib_only.rs  logging.rs  main.rs  network.rs  share.rs  swtor.rs  swtor_hook.rs  utils.rs
src-tauri/src/capture_injector/: message_container.rs  message_parser.rs  player_gui_state.rs  swtor_message.rs  syringe_container.rs
src-tauri/src/crash_reporter/: crash_report_response.rs  sys_info.rs
src-tauri/src/dal/: character_colors.rs  characters.rs  colors.rs  db.rs  game_data.rs  local_characters.rs
src-tauri/src/dal/db/: account.rs  cache.rs  chat_log.rs  custom_channel.rs  custom_emote.rs  log.rs  migration.rs  settings.rs  swtor_message.rs  user_character_messages.rs
src-tauri/src/dal/db/account/: character.rs
src-tauri/src/dal/db/chat_log/: datetags.rs
src-tauri/src/dal/db/migration/: chat_tab_migration.rs
src-tauri/src/dal/db/settings/: app_settings.rs  chat_log.rs  chat_settings.rs  dimensions.rs
src-tauri/src/dal/db/settings/chat_log/: chat_tab.rs  window.rs
src-tauri/src/dal/db/settings/chat_settings/: chat_tab.rs
src-tauri/src/lib_only/: chat_message.rs  friends_list.rs
src-tauri/src/share/: raw_swtor_message.rs
src-tauri/src/swtor_hook/: message_hash_container.rs  post.rs
src/components/: _ChannelColorPickerModal.svelte  _ChannelList.svelte  _CharacterSheetViewer.svelte  _CustomCommand.svelte  _Message.svelte  _Messages.svelte  _PageFormatting.svelte  _PlayerFilter.svelte  _SelectList.svelte  _Tooltip.svelte  select_list.ts
src/components/channel_color_picker_modal/: _Color.svelte
src/components/character_creator/: _Attributes.svelte  _CharacterCreator.svelte  _Name.svelte  _PMButton.svelte  _Perk.svelte  _PerkMeta.svelte  _Perks.svelte  _Save.svelte  _Skills.svelte  _Template.svelte  _WeaponProficiencies.svelte  character_creator.ts
src/components/emotes_list/: _CustomEmoteElem.svelte  _CustomEmotesList.svelte
src/components/messages/: AchievementFragment.svelte  ExternalFragment.svelte  ItemFragment.svelte  MessageFragment.svelte  QuestFragment.svelte  utils.ts
src/lib/: Checkbox.svelte  ConfirmationModal.svelte  _ChatLogWindow.svelte  _CustomEmotesList.svelte  api.ts  auto_message_splitter.test.ts  auto_message_splitter.ts  click_outside.ts  custom_emote_utils.ts  game_data.ts  hyperlink_parser.test.ts  hyperlink_parser.ts  messages.ts  network.ts  option.ts  result.ts  svelte_utils.ts  utils.ts  window.ts
src/lib/api/: account.ts  character.ts  chator.ts  star_forge_beacons.ts  system.ts  template.ts
src/lib/buttons/: SmallButton.svelte  StandardMenuButton.svelte  VariableSizeButton.svelte  XButton.svelte
src/lib/character_sheet/: character_sheet.ts  character_sheet_utils.ts
src/lib/character_template/: attributes.ts  character_template.ts  common.ts  perk.ts  weapon_proficiency.ts
src/lib/chat_log_window/: _ChatTab.svelte  _ChatTabs.svelte  _EditModal.svelte  _RestorePosts.svelte  chat_log_window_store.ts  chat_log_window_utils.ts
src/lib/com/: custom_emote.ts
src/lib/hyperlink/: achievement.ts  base.ts  guild.ts  item.ts  pvp.ts  quest.ts  unknown.ts  url.ts
src/lib/navbar/: NavbarSection.svelte  navbar.ts
src/lib/network/: character_colors.ts  characters.ts  chat_log_message.ts  custom_channels.ts  custom_emote.ts  datetags.ts  default_settings.json  local_characters.ts  players.ts  settings.ts  swtor_channel.ts  swtor_message.ts
src/lib/network/swtor_message/: swtor_chat_tab_messages.ts
src/lib/tabs/: Tab.svelte  TabsContainer.svelte
src/routes/: _Automatic.svelte  _FooterControls.svelte  _Manual.svelte  _Navbar.svelte  _NonDecoratedHeader.svelte  _module.svelte  index.svelte  utils.test.ts  utils.ts
src/routes/_Automatic/: _AutomaticConfirmation.svelte
src/routes/automatic/: _AutomaticConfirmation.svelte  index.svelte
src/routes/character_sheets/: index.svelte
src/routes/character_sheets/create/: _Attributes.svelte  _Name.svelte  _PMButton.svelte  _Perk.svelte  _PerkMeta.svelte  _Perks.svelte  _Save.svelte  _Skills.svelte  _Template.svelte  _WeaponProficiencies.svelte  (+3 more)
src/routes/custom_channels/: _AddModal.svelte  _AddNew.svelte  _Existing.svelte  _ExistingElem.svelte  _HelpfulText.svelte  custom_channels.ts  index.svelte
src/routes/custom_emotes/: _Emote.svelte  _EmoteContainer.svelte  _EmoteModal.svelte  index.svelte
src/routes/emote_board/: index.svelte
src/routes/log_viewer/: _Favourite.svelte  _Filter.svelte  index.svelte
src/routes/manual/: index.svelte
src/routes/settings/: _AppSettings.svelte  _ChatAutomaticSection.svelte  _ChatLogWindow.svelte  _ChatLogging.svelte  _ChatManualSection.svelte  _ChatSection.svelte  _Setting.svelte  _SettingSection.svelte  _SettingsDropdown.svelte  _SettingsRangeSlider.svelte  _SettingsToggle.svelte  _ValidSetting.svelte  index.svelte  settings.ts
src/routes/star_forge_beacons/: _LinkComponent.svelte  index.svelte
(+2 files in other folders)
