[package]
name = "chator"
version = "0.1.3"
description = "A Chat system for Star Wars: The Old Republic."
authors = ["Emma Davenport"]
license = ""
repository = ""
default-run = "chator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swtor_chat_capture"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "chator"
path = "src/main.rs"


[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "fs-write-file", "window-all", "dialog-all", "devtools"] }
open = "5.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sha2 = "0.10"
rust-ini = "0.21"
regex = "1.10"
chrono = {version = "0.4", features = ["serde"] }
tokio = {version = "1", features = ["time"] }
int-enum = "1.1"
ctrlc = "3.4.4"

lazy_static = "1.4.0"
clipboard-win = "5.0.0"
retour = { version = "0.3", features = ["static-detour"] }
dll-syringe = "0.15.2"
ctor = "0.2.8"
windows = { version = "0.52", features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging"] }
em-libs = { git = "https://github.com/Davenport-Physics/EmLibs"}
directories = "5.0.1"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
