[package]
name = "chator"
version = "0.1.16"
description = "A Chat system for Star Wars: The Old Republic."
authors = ["Emma Davenport"]
license = ""
repository = ""
default-run = "chator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swtor_chat_capture"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "chator"
path = "src/main.rs"


[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]

# Async
futures = "0.3"
tokio = { version = "1", features = ["time", "macros"] }

# Database
rusqlite = { version = "0.31.0", features = ["bundled"] }

# GUI
tauri = { version = "1.6.2", features = ["fs-write-file", "window-all", "dialog-all", "devtools"] }

# Hashing
sha2 = "0.10"
base64 = "0.22"

# Helpers
int-enum = "1.1"
lazy_static = "1.4.0"

# Injection
ctor = "0.2.8"
dll-syringe = "0.15.2"
retour = { version = "0.3", features = ["static-detour"] }

# Local System
directories = "5.0.1"
open = "5.1"
sysinfo = "0.30"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Misc
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.4"
regex = "1.10"

# Project Specific
chator-macros = { git = "https://github.com/RPCompanion/chator-macros" }
em-libs = { git = "https://github.com/Davenport-Physics/EmLibs" }

# Serialization/Formats
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Web
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.19"

# Windows
clipboard-win = "5.0.0"
windows = { version = "0.52", features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
